midpoint/release/3.7.1/index.adoc
---
release-version: '3.7.1'
---
= MidPoint 3.7.1 "Darwin" Update 1
:page-layout: release
:release-version: 3.7.1
:page-wiki-name: Release 3.7.1
:page-wiki-id: 24676400
:page-wiki-metadata-create-user: semancik
:page-wiki-metadata-create-date: 2018-01-22T17:35:10.110+01:00
:page-wiki-metadata-modify-user: semancik
:page-wiki-metadata-modify-date: 2020-01-30T10:46:16.930+01:00
:page-liquid:

Release {release-version} is a twenty-fourth midPoint release.
It is the first maintenance update for 3.7.x version family code-named _Darwin_.
The {release-version} release brings stability improvements and several minor features.

++++
{% include release-data.html %}
++++

++++
{% capture dedicationContent %}
<p>
    <a href="https://en.wikipedia.org/wiki/Charles_Darwin">Charles_Darwin</a> (1809 - 1882) was English naturalist, geologist and biologist, best known for the theory of evolution.
    Darwin's famous book On the Origin of Species described theory of evolution, mechanism of natural selection that explains the diversity of life.
    His voyage on HMS Beagle established him as an eminent geologist and made him famous as a popular author.
    Darwin has been described as one of the most influential figures in human history.
</p>
<p>
    Darwin's theory of evolution is the unifying theory of the life sciences.
    The theory describes the process how species evolve and adapt over successive generations.
    MidPoint 3.7 is such an evolutionary step in midPoint development.
    This midPoint release brings gradual improvements in many diverse areas.
    Identity governance features are improved, both in capabilities of the engine and the user interface.
    MidPoint expressions have gained more power and ease of use. There are notable improvements in user interface, security, task management and many smaller improvements in various areas.
    The scope of almost the entire release was guided by midPoint subscribers and sponsors - which provided the perfect environment for this step in midPoint evolution.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Features

midPoint {release-version} provides following features:

* *Common identity management data model*

** Extensible object types:

*** User objects to represent users, physical persons and xrefv:/midpoint/reference/before-4.8/misc/persona/[personas]

*** Role objects to represent roles, privileges, jobs and so on

*** Org objects to represent xrefv:/midpoint/reference/before-4.8/org/organizational-structure/[organizational units], teams, workgroups, etc.

*** Service objects to represent servers, network devices, mobile devices, network services, etc.

** Numerous built-in properties

** Extensibility by custom properties

** Completely schema-aware system

*** Dynamic schema automatically retrieved from resource

*** Support for primitive data types

*** Native support of multi-value attributes

*** Limited support for complex data types

** Processing and computation fully based on xrefv:/midpoint/reference/before-4.8/concepts/relativity/[relative changes]

** Off-the-shelf support for user password credentials

** Off-the-shelf support for activation (users, roles, orgs, services)

*** Enabled/disabled states (extensible in the future)

*** Support for user validity time constraints (valid from, valid to)

** Object template to define policies, default values, etc.

*** Ability to use conditional mappings (e.g. to create RB-RBAC setup)

*** Ability to include other object templates

*** Global and resource-specific template setup

** Representation of all configuration and data objects in XML, JSON and YAML


* *Identity management*

** xrefv:/midpoint/reference/before-4.8/synchronization/examples/[Enabling and disabling accounts]

** Support for xrefv:/midpoint/reference/before-4.8/expressions/[mapping and expressions] to determine account attributes

** xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/[Multi-layer attribute access limitations]

** xrefv:/midpoint/reference/before-4.8/resources/provisioning-dependencies/[Provisioning dependencies]

*** Higher-order dependencies (enables partial support for circular provisioning dependencies)

** xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[Provisioning robustness] - ability to provision to non-accessible (offline) resources

** xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[Provisioning consistency] - ability to handle provisioning errors and compensate for inconsistencies

** Support for xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/#attribute-tolerance[tolerant attributes]

*** Ability to select tolerant and non-tolerant values using a pattern (regexp)

** Support for volatile attributes (attributes changed by the resource)

** xrefv:/midpoint/reference/before-4.8/concepts/matching-rules/[Matching Rules]

*** Matching rules to support case insensitive attributes, DN and UUID attributes, XML attributes, etc.
(extensible)

*** Automatic matching rule discovery

** Ability to execute scripts before/after provisioning operations

*** xrefv:/midpoint/reference/before-4.8/schema/object-references/[Object schema validation during import] (can be switched off)

*** xrefv:/midpoint/reference/before-4.8/schema/object-references/[Smart references between objects based on search filters]

** Advanced support for account activation (enabled/disabled states)

*** Standardized account activation that matches user activation schema for easy integration

*** Ability to simulate activation capability if the connector does not provide it

*** Support for account lock-out

*** Support for account validity time constrains (valid from, valid to)

*** Support easy xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/activation/[activation existence mappings] (e.g. easy configuration of "disables instead of delete" feature)

*** Support for xrefv:/midpoint/reference/before-4.8/expressions/mappings/[mapping time constraints] in activation mappings that allow configuring time-related provisioning features such as xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/activation/[deferred account delete or pre-provisioning].

** Ability to specify set of xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/protected-accounts/[protected accounts] that will not be affected by IDM system

** Support for base context searches for connectors that support object hierarchies (such as LDAP)

** xrefv:/midpoint/reference/before-4.8/misc/notifications/[Notifications]

** xrefv:/midpoint/reference/before-4.8/misc/bulk/[Bulk actions]

** Passive xrefv:/midpoint/reference/before-4.8/resources/attribute-caching/[Attribute Caching] (EXPERIMENTAL)

** Partial multi-tenancy support


* *Synchronization* +

** xrefv:/midpoint/reference/before-4.8/synchronization/introduction/[Live synchronization]

** xrefv:/midpoint/reference/before-4.8/concepts/relativity/[Reconciliation]

*** Ability to execute scripts before/after reconciliation

** Correlation and confirmation expressions

*** Conditional correlation expressions

** Concept of _channel_ that can be used to adjust synchronization behaviour in some situations

** xrefv:/midpoint/reference/before-4.8/synchronization/generic-synchronization/[Generic Synchronization] allows synchronization of roles to groups to organizational units to ... anything

** Self-healing xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[consistency mechanism]


* *Advanced RBAC*

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[Expressions in the roles]

** Hierarchical roles

** Conditional roles and assignments/inducements

** Parametric roles (including ability to assign the same role several times with different parameters)

** Temporal constraints (validity dates: valid from, valid to)

** xrefv:/midpoint/reference/before-4.8/roles-policies/metaroles/gensync/[Metaroles]

** Role catalog

** Role request based on shopping cart paradigm

** Several xrefv:/midpoint/reference/before-4.8/synchronization/projection-policy/[assignment enforcement modes]

*** Ability to specify global or resource-specific enforcement mode

*** Ability to "legalize" assignment that violates the enforcement mode

** Rule-based RBAC (RB-RBAC) ability by using conditional mappings in xrefv:/midpoint/reference/before-4.8/expressions/object-template/[user template] and xrefv:/midpoint/reference/before-4.8/roles-policies/role-autoassignment/[role autoassignment] and entitlement associations

** GUI support for entitlement listing, membership and editing

** Entitlement approval


* *Identity governance*

** Powerful xrefv:/midpoint/reference/before-4.8/org/organizational-structure/[organizational structure management]

** xrefv:/midpoint/reference/before-4.8/cases/workflow-3/[Workflow support] (based on link:http://www.activiti.org/[Activiti] engine)

*** Declarative policy-based multi-level xrefv:/midpoint/reference/before-4.8/cases/approval/[approval] process

*** Visualization of approval process

** xrefv:/midpoint/reference/before-4.8/concepts/object-lifecycle/[Object lifecycle] property

** Object history (time machine)

** xrefv:/midpoint/reference/before-4.8/roles-policies/policy-rules/[Policy Rules] as a unified mechanism to define identity management, governance and compliance policies

** xrefv:/midpoint/reference/before-4.8/roles-policies/segregation-of-duties/[Segregation of Duties] (SoD)

*** Many options to define xrefv:/midpoint/reference/before-4.8/roles-policies/segregation-of-duties/[role exclusions]

*** SoD approvals

*** SoD certification

** Assignment constraints for roles and organizational structure

** xrefv:/midpoint/reference/before-4.8/roles-policies/certification/[Access certification]

** Ad-hoc recertificaiton

** Basic xrefv:/midpoint/reference/before-4.8/roles-policies/role-lifecycle/[role lifecycle] management (role approvals)

** xrefv:/midpoint/reference/before-4.8/misc/deputy/[Deputy] (ad-hoc privilege delegation)

** Escalation in approval and certification processes

** xrefv:/midpoint/reference/before-4.8/misc/persona/[Personas]

** Rich assignment meta-data


* *Expressions, mappings and other dynamic features* +

** xrefv:/midpoint/reference/before-4.8/expressions/sequences/[Sequences] for reliable allocation of unique identifiers

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[Customization expressions]

*** xrefv:/midpoint/reference/before-4.8/expressions/expressions/script/groovy/[Groovy]

*** Python

*** xrefv:/midpoint/reference/before-4.8/expressions/expressions/script/javascript/[JavaScript (ECMAScript)]

*** Built-in libraries with a convenient set of functions

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[PolyString] support allows automatic conversion of strings in national alphabets

** Mechanism to iteratively determine unique usernames and other identifier

** xrefv:/midpoint/reference/before-4.8/expressions/function-libraries/[Function libraries]


* *Web-based administration user interface*

** Ability to execute identity management operations on users and accounts

** User-centric views

** Account-centric views (browse and search accounts directly)

** Resource wizard

** Layout automatically adapts to screen size (e.g. for mobile devices)

** Easily customizable look & feel

** Built-in XML editor for identity and configuration objects

** Identity merge


* *Self-service*

** User profile page

** Password management page

** Role selection and request dialog

** Self-registration

** Email-based password reset


* *Connectors*

** Integration of xref:/connectors/connectors/[ConnId identity connector framework]

*** Support for Evolveum Polygon connectors

*** Support for ConnId connectors

*** Support for OpenICF connectors (limited)

** Automatic generation and caching of xrefv:/midpoint/reference/before-4.8/resources/resource-schema/[resource schema] from the connector

** xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[Local connector discovery]

** Support for connector hosts and remote xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[connectors], xref:/connectors/connectors/[identity connector] and xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectorhosttype/[connectors host type]

** Remote connector discovery

** xrefv:/midpoint/reference/before-4.8/resources/manual/[Manual Resource and ITSM Integration]

** xref:/midpoint/architecture/archive/subsystems/provisioning/ucf/[Unified Connector Framework (UCF) layer to allow more provisioning frameworks in the future]


* *Flexible identity repository implementations and SQL repository implementation*

** xrefv:/midpoint/reference/before-4.8/repository/generic/implementation/[Identity repository based on relational databases]

** xref:/midpoint/guides/admin-gui-user-guide/#keeping-metadata-for-all-objects-creation-modification-approvals[Keeping metadata for all objects] (creation, modification, approvals)

** xrefv:/midpoint/reference/before-4.8/deployment/removing-obsolete-information/[Automatic repository cleanup] to keep the data store size sustainable


* *Security*

** Fine-grained authorization model

*** xrefv:/midpoint/reference/before-4.8/security/authorization/configuration/[Authorization expressions]

*** Limited xrefv:/midpoint/reference/before-4.8/security/power-of-attorney/[power of attorney] implementation

** Organizational structure and RBAC integration

** Delegated administration

** Password management

*** Password distribution

*** xrefv:/midpoint/reference/before-4.8/security/credentials/password-policy/[Password policies]

*** Password retention policy

*** Self-service password management

*** Password storage options (encryption, hashing)

*** Mail-based initialization of passwords for new accounts

** CSRF protection

** Auditing to xrefv:/midpoint/reference/before-4.8/security/audit/#logfile-auditing[file (logging)]

** Auditing to xrefv:/midpoint/reference/before-4.8/security/audit/#database-table-auditing[SQL table]

** Interactive audit log viewer


* *Extensibility*

** xrefv:/midpoint/reference/before-4.8/schema/custom-schema-extension/[Custom schema extensibility]

** xrefv:/midpoint/reference/before-4.8/concepts/clockwork/scripting-hooks/[Scripting Hooks]

** xrefv:/midpoint/reference/before-4.8/misc/lookup-tables/[Lookup Tables]

** Support for overlay projects and deep customization

** Support for programmatic custom GUI forms (Apache Wicket components)

** Basic support for declarative custom forms

** API accessible using a REST, web services (SOAP) and local JAVA calls


* *Reporting*

** Scheduled reports

** Lightweight reporting (CSV export) built into user interface

** Comprehensive reporting based on Jasper Reports

** xrefv:/midpoint/reference/before-4.8/misc/reports/post-report-script/[Post report script]


* *Internals*

** xrefv:/midpoint/reference/before-4.8/tasks/task-manager/[Task management]

*** xrefv:/midpoint/reference/before-4.8/tasks/task-template/[Task template]

*** xrefv:/midpoint/reference/before-4.8/tasks/node-sticky-tasks/[Node-sticky tasks]


* *Operations*

** Lightweight deployment structure with two deployment options:

*** xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment]

*** Deployment to web container (WAR)

** xrefv:/midpoint/reference/before-4.8/tasks/task-manager/[Multi-node task manager component with HA support]

** Comprehensive logging designed to aid troubleshooting

** Enterprise class scalability (hundreds of thousands of users)


* *Documentation*

** xref:/midpoint/[Administration documentation publicly available in the wiki]

** xref:/midpoint/architecture/[Architectural documentation publicly available in the wiki]

** Schema documentation automatically generated from the definition (xrefv:/midpoint/reference/before-4.8/schema/schemadoc/[schemadoc])

== Changes With Respect to Version 3.7

* xrefv:/midpoint/reference/before-4.8/resources/propagation/[Provisioning Propagation]

* xrefv:/midpoint/reference/before-4.8/security/credentials/password-policy/[Password Policy: prohibited projection values]

* Negative item enumeration in authorizations (`exceptItem`)

* Ad-hoc provisioning script execution

* Improved handling of xrefv:/midpoint/reference/before-4.8/expressions/function-libraries/[function libraries]

* Minor mapping improvements

* Improved SMS gateway support (HTTP POST method)

* Various user interface improvements

xref:/connectors/connectors/com.evolveum.polygon.csvfile.CSVFileConnector/[Old CSVFile Connector] is deprecated and it is no longer bundled with midPoint. +
Support for PostgreSQL 8.4 is deprecated.
The support will be dropped in the future. +
Oracle database 11g support was deprecated in midPoint 3.7. This will be replaced for Oracle 12c database support in midPoint 3.8. +
Support for Microsoft SQL Server 2008 and 2008 R2 is deprecated.
The support will be dropped in the future.

== Changes With Respect to Version 3.6

* xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment] based on Spring Boot

* User interface improvements

** New assignment list tab

** Improvement for human-readable error messages

** Improved approval messages and screens

** Improved policy violation messages

** Support for associations in role editor

** User interface support for policy rules

** Customization improvements

** Visualization of approval process


* Governance improvements

** Improved assignment metadata

** Policy rules for attribute values

** Dependency policy rules


* Expression, mapping and bulk action improvements

** xrefv:/midpoint/reference/before-4.8/expressions/function-libraries/[Function libraries]

** Significantly improved xrefv:/midpoint/reference/before-4.8/expressions/mappings/inbound-mapping/[inbound mapping]

** Selection of assignment path index in `associationFromLink` expressions.

** Function to determine projection existence

** xrefv:/midpoint/reference/before-4.8/misc/bulk/variables/[Variables in bulk actions]

** xrefv:/midpoint/reference/before-4.8/roles-policies/role-autoassignment/[Role autoassignment]


* Security improvements

** xrefv:/midpoint/reference/before-4.8/security/authorization/configuration/[Authorization expressions]

** Limited xrefv:/midpoint/reference/before-4.8/security/power-of-attorney/[power of attorney] implementation

** Special authorizations for raw operations

** xrefv:/midpoint/reference/before-4.8/security/credentials/password-policy/[Password policy] improvements to enforce different persona passwords.

** CSRF protection

** More secure default file permissions


* Task improvements

** xrefv:/midpoint/reference/before-4.8/tasks/task-template/[Task template]

** Node-sticky tasks


* Miscellaneous improvements

** xrefv:/midpoint/reference/before-4.8/misc/reports/post-report-script/[Post report script]

** Improved provisioning script error handling

** Improved JSON/YAML support

** Import validation improvements


Java 7 environment is no longer supported. +
XPath2 scripting is no longer supported. +
xref:/connectors/connectors/com.evolveum.polygon.csvfile.CSVFileConnector/[Old CSVFile Connector] is deprecated and it is no longer bundled with midPoint. +
Support for PostgreSQL 8.4 is deprecated.
The support will be dropped in the future. +
Oracle database 11g support is deprecated in midPoint 3.7. This will be replaced for Oracle 12c database support in midPoint 3.8. +
Support for Microsoft SQL Server 2008 and 2008 R2 is deprecated.
The support will be dropped in the future.


++++
{% include release-quality.html %}
++++

=== Limitations

* MidPoint {release-version} comes with a bundled LDAP-based eDirectory connector.
This connector is stable, however it is not included in the normal midPoint support.
Support for this connector has to be purchased separately.

== Platforms

MidPoint is known to work well in the following deployment environment.
The following list is list of *tested* platforms, i.e. platforms that midPoint team or reliable partners personally tested with this release.
The version numbers in parentheses are the actual version numbers used for the tests.
However it is very likely that midPoint will also work in similar environments.
Also note that this list is not closed.
MidPoint can be supported in almost any reasonably recent platform (please contact Evolveum for more details).


=== Java

* OpenJDK 8 (1.8.0_91, 1.8.0_111, 1.8.0_151)

* Sun/Oracle Java SE Runtime Environment 8 (1.8.0_45, 1.8.0_65, 1.8.0_74, 1.8.0_131)

=== Web Containers

* Apache Tomcat 8 (8.0.14, 8.0.20, 8.0.28, 8.0.30, 8.0.33, 8.5.4)

* BEA/Oracle WebLogic (12c) -  special subscription required

[NOTE]
.Web container (application server) support
====
MidPoint 3.7 introduced xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment] form that does not need an application server.
This is the primary deployment model for midPoint.
The deployment to web container is still supported.
However the only supported web container is Apache Tomcat.
Other web containers (application servers) may be supported if the support is explicitly negotiated in midPoint subscription.
Except for those cases midPoint development team will not provide any support for other web containers.

Currently there are no plans to remove support for deployed midPoint installation using a WAR file.
However, it is possible that this deployment form will get phased out eventually unless there are active subscribers preferring this deployment method.
MidPoint subscription is strongly recommended if you plan to use this method in the future.
====

=== Databases

* H2 (embedded, only recommended for demo deployments)

* PostgreSQL (8.4.14, 9.1, 9.2, 9.3, 9.4, 9.4.5, 9.5, 9.5.1) +
Support for PostgreSQL 8.4 is deprecated.
The support will be dropped in the future.

* MariaDB (10.0.28)

* MySQL (5.6.26, 5.7) +
Supported MySQL version is 5.6.10 and above (with MySQL JDBC ConnectorJ 5.1.23 and above). +
MySQL in previous versions didn't support dates/timestamps with more accurate than second fraction precision.

* Oracle 11g (11.2.0.2.0) +
Oracle 11g support is deprecated in midPoint 3.7. This will be replaced for Oracle 12c support in midPoint 3.8.

* Microsoft SQL Server (2008, 2008 R2, 2012, 2014) +
Support for Microsoft SQL Server 2008 and 2008 R2 is deprecated.
The support will be dropped in the future.

=== Supported Browsers

* Firefox (any recent version)

* Safari (any recent version)

* Chrome (any recent version)

* Opera (any recent version)

* Microsoft Internet Explorer (version 9 or later)

Recent version of browser as mentioned above means any stable stock version of the browser released in the last two years.
We formally support only stock, non-customized versions of the browsers without any extensions or other add-ons.
According to the experience most extensions should work fine with midPoint.
However, it is not possible to test midPoint with all of them and support all of them.
Therefore, if you chose to use extensions or customize the browser in any non-standard way you are doing that on your own risk.
We reserve the right not to support customized web browsers.

Microsoft Internet Explorer compatibility mode is *not* supported.

== Important Bundled Components

[%autowidth]
|===
| Component | Version | Description

| ConnId
| 1.4.3.0
| ConnId Connector Framework


| LDAP connector bundle
| 1.5.1
| LDAP, Active Directory and eDirectory connector


| CSV connector
| 2.1
| Connector for CSV files


| DatabaseTable connector
| 1.4.2.0
| Connector for simple database tables

|===

++++
{% include release-download.html %}
++++

[NOTE]
.Stand-alone deployment model
====
MidPoint 3.7 deployment method has changed.
xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment] is now the default deployment method.
MidPoint default configuration, scripts and almost everything else was adapted for this method.

* *New midPoint users* and *new deployments* should simply follow the xref:install.adoc[installation manual].

* *Existing deployments* may keep using exactly the same configuration as before.
xref:/midpoint/install/bare-installation/webapp-deployment/[Deployment of midPoint as Web Application] is still supported as an alternative.
However, xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[stand-alone deployment] is now the primary option.
It is recommended to migrate the deployment based on application server to a stand-alone deployment in the future.
See our xrefv:/midpoint/reference/before-4.8/upgrade/tomcat-to-standalone/[brief migration guide].
====

== Upgrade

MidPoint is software that is designed for easy upgradeability.
We do our best to maintain strong backward compatibility of midPoint data model, configuration and system behavior.
However, midPoint is also very flexible and comprehensive software system with a very rich data model.
It is not humanly possible to test all the potential upgrade paths and scenarios.
Also some changes in midPoint behavior are inevitable to maintain midPoint development pace.
Therefore we can assure reliable midPoint upgrades only for link:https://evolveum.com/services/[midPoint subscribers]. This section provides overall overview of the changes and upgrade procedures.
Although we try to our best it is not possible to foresee all possible uses of midPoint.
Therefore the information provided in this section are for information purposes only without any guarantees of completeness.
In case of any doubts about upgrade or behavior changes please use services associated with link:https://evolveum.com/services/[midPoint subscription] or purchase link:https://evolveum.com/services/professional-services/[professional services].


=== Upgrade from midPoint 3.0, 3.1, 3.1.1, 3.2, 3.3, 3.3.1, 3.4, 3.4.1, 3.5, 3.5.1, 3.6 and 3.6.1

Upgrade path from MidPoint 3.0 goes through midPoint 3.1, 3.1.1, 3.2, 3.3, 3.4.1, 3.5.1 and 3.6.1. Upgrade to midPoint 3.1 first (refer to the xref:/midpoint/release/3.1/[midPoint 3.1 release notes]). Then upgrade from midPoint 3.1 to 3.1.1, from 3.1.1 to 3.2 then to 3.3, then to 3.4.1, 3.5.1, 3.6.1 and finally to 3.7.1.

=== Upgrade from midPoint 3.7

MidPoint 3.7.1 data model have not changed since midPoint 3.7. Therefore there is no need to update the database.

=== Changes in initial objects since 3.7

There were no changes to initial object since midPoint 3.7.

=== Bundled connector changes since 3.7

There were no connector changes since midPoint 3.7.

=== Behavior changes since 3.7

* URLs used by xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-Alone Deployment] were changed to match the URLs used by Tomcat-based deployments of midPoint 3.6 and earlier.
This means that all deployment forms now use `/midpoint/` context root path in the URL by default (e.g. `http://localhost:8080/midpoint/`). This choice was made based on user feedback to keep the compatibility with previous midPoint versions and to keep the two deployment models as closely aligned as possible.
For the stand-alone deployment there is an automatic HTTP redirect from the root URL (e.g. `http://localhost:8080/`) to midPoint context root (e.g. `http://localhost:8080/midpoint/`). Therefore in midPoint 3.7.1 both deployment method should behave in a natural, expected and compatible way.

* Processing of authorizations for proxy authentication in the REST interface was corrected.
The processing of proxy authorizations now behave as documented.

* Processing of object authorizations was corrected.
Authorizations now take into consideration also the properties of existing removed containers even in _replace_ and _id-only delete_ cases.
Therefore, appropriate property authorization is needed even when deleting a value that contains those properties.

* Password reset schema was deprecated.
Existing password reset configuration still works, but it will be replace by xrefv:/midpoint/reference/before-4.8/security/credentials/password-reset/new-configuration/[new password reset configuration] in the future.

=== Public interface changes since 3.7

* REST interface was extended with experimental password reset method.

=== Important internal changes since 3.7

There were not critical internal changes since midPoint 3.7.

++++
{% include release-issues.html %}
++++

There is a support to set up storage of credentials in either encrypted or hashed form.
There is also unsupported and undocumented option to turn off credential storage.
This option partially works, but there may be side effects and interactions.
This option is not fully supported yet.
Do not use it or use it only at your own risk.
It is not included in any midPoint support agreement.

Native attribute with the name of 'id' cannot be currently used in midPoint (bug:MID-3872[]). If the attribute name in the resource cannot be changed then the workaround is to force the use of legacy schema.
In that case midPoint will use the legacy ConnId attribute names (icfs:name and icfs:uid).

JavaDoc is temporarily not available due to the link:https://bugs.openjdk.java.net/browse/JDK-8061305[issue in Java platform]. This issue is fixed in Java 9 platform, but backport of this fix to Java 8 is (quite surprisingly) not planned.